# qt-httpclient

./: .gitignore  CMakeLists.txt  HttpClient.pro  httpbin.sh
HttpClient/include/: HttpClient.h  HttpContentInterface.h  HttpGlobalRequestOptions.h  HttpJsonContent.h  HttpQueryContent.h  HttpRequest.h  HttpResponse.h  HttpUtils.h
HttpClient/source/: HttpClient.cpp  HttpGlobalRequestOptions.cpp  HttpJsonContent.cpp  HttpQueryContent.cpp  HttpRequest.cpp  HttpResponse.cpp
include/: HttpClient.h  HttpContentInterface.h  HttpGlobalRequestOptions.h  HttpJsonContent.h  HttpQueryContent.h  HttpRequest.h  HttpResponse.h  HttpUtils.h
source/: HttpClient.cpp  HttpGlobalRequestOptions.cpp  HttpJsonContent.cpp  HttpQueryContent.cpp  HttpRequest.cpp  HttpResponse.cpp
test/: CMakeLists.txt  HttpClientTest.cpp  main.cpp
test/dependency/: catch.hpp
